[package]
name = "emd"
version = "0.1.1"
authors = ["Giovanni Cherubin <g.chers@gmail.com>", "Emily Hentgen <emily.hentgen@epfl.ch>"]
description = "A library for computing the Earth Mover's Distance"
repository = "https://github.com/gchers/rust-emd"
license = "MIT"
edition = "2018"
build = "build.rs"
links = "emd"

[build-dependencies]
cc = "1.0.37"

[dependencies]
libc = "0.2"
ndarray = "0.12.1"
